10993
Also fails under 2.10 with -Xdivergence211 (SI-7291)
```
% scalac-hash v2.10.4 -Xdivergence211 test/files/pos/t8541.scala
test/files/pos/t8541.scala:11: error: diverging implicit expansion for type scala.math.Ordering[(Int, Test2.TimeStamp)]
starting with method orderingToOrdered in object Ordered
   List.empty[(Int,TimeStamp)].sorted
                               ^
```
